<resources>
    <string name="title_activity_preferences">Configuración de preferencias</string>
    <string name="title_activity_sentences">Frases</string>
    <string name="title_activity_exercise">Ejercicios</string>

    <string name="action_settings">Configuración</string>
    <string name="sentences">Frases</string>
    <string name="exercises">Ejercicios</string>

    <string name="level">Nivel de Aprendizaje</string>
    <string name="level_a1">Acceso(A1)</string>
    <string name="level_a2">Plataforma(A2)</string>
    <string name="level_b1">Umbral(B1)</string>
    <string name="level_b2">Avanzado(B2)</string>

    <string name="statistics">Datos Estadísticos</string>


    <string name="help">Ayuda</string>
    <string name="shared">Compartir App</string>


    <string name="info">Información</string>
    <string name="version">Versión</string>
    <string name="author">Autor</string>

    <string name="configuration">Configuración</string>
    <string name="lang">Seleccionar Idioma</string>
    <string-array name="language">
        <item>Español</item>
        <item>Inglés</item>
        <item>Francés</item>
        <item>Italiano</item>
        <item>Portugues</item>
    </string-array>

    <string name="slogan">Permítanos estudiar más idiomas para hablar una lengua común.</string>
    <string name="navigation_drawer_close">Cierre la gaveta de navegación</string>
    <string name="navigation_drawer_open">Abre ls gaveta de navegación</string>


    //


    <string name="left">izquierdo</string>
    <string name="right">derecha</string>

    <!-- Strings related to login -->
    <string name="prompt_user">usuario &#8230;</string>
    <string name="prompt_password">contraseña …</string>
    <string name="prompt_repeat_password">repetir contraseña &#8230;</string>
    <string name="prompt_name">nombre &#8230;</string>


    <string name="users">Usuarios</string>
    <string name="register">Registrar</string>

    <string name="log_user">Nuevo registro de Usuario</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_register">Registrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_user" translatable="false">usuario invalido</string>
    <string name="error_invalid_password">contraseña pequeña</string>
    <string name="error_incorrect_password">Contraseña inválida</string>
    <string name="error_field_required">Es requerido</string>
    <string name="permission_rationale">"correo no permitido"</string>

    <string name="home">Estadísticas</string>
    <string name="logout">Salir</string>
    <string name="delete_user">Eliminar usuario</string>
    <string name="delete">Eliminar</string>


    //
    <string name="statics">Estadísticas de uso de app</string>
    <string name="months">Meses</string>
    <string-array name="months">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>

    </string-array>

    <string-array name="days">
        <item>Domingo</item>
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sábado</item>

    </string-array>

    <string name="hours">Horas</string>
    <string name="day">Día</string>
    <string name="week">Semana</string>
    <string name="week_now">Semana actual</string>
    <string name="description_evaluation">Resultados de evaluación</string>
    <string name="year">Año</string>
    <string name="entries_statics_app">Cantidad de minutos de uso diario</string>

    <string-array name="evaluation">
        <item>Sin responder</item>
        <item>Respuestas correctas</item>
        <item>Respuestas incorrectas</item>
    </string-array>

    <string name="title_evaluation">Estadísticas de Evaluación</string>
    <string name="title_statics_app">Estadísticas de Uso del App</string>
    <string name="next">Siguiente</string>

    <string name="notification_1">Se recomienda estudiar el tema:</string>
    <string name="notification_2">Es necesario estudiar el tema:</string>



    <string name="app_back_pressed_exit">vuelva a presionar para salir</string>
    <string name="title_activity_exercise_type_one" translatable="false">ExerciseTypeOne</string>

    //
    <string name="info_translate">Traducir la siguiente frase:</string>
    <string name="info_complete">Ordenar la siguiente frase:</string>
    <string name="info_listen">Escucha y escribe la frase:</string>

    <string name="out">Omitir</string>
    <string name="ok">Aceptar</string>

    <string name="select_theme">Seleccionar Tema</string>
    <string-array name="theme">
        <item>Claro</item>
        <item>Oscuro</item>
    </string-array>



    <string-array name="themeValues">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="velocidad_audio">Velocidad de audio</string>
    <string name="tono_audio">Tono de audio</string>

    <string name="answer">Respuesta</string>
    <string name="answer_ok">Felicidades. Respondiste bien</string>
    <string name="answer_bad">Ups fallaste, la respuesta es: </string>
    <string name="title_activity_login">Iniciar sesión</string>
    <string name="project" translatable="false">Proyecto plurilingüe</string>
    <string name="app_name">Aplicación Plurilingüe Cubana (APCU)</string>

</resources>
