<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black"
        />

    <item android:title="@string/level">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_level_A1"
                android:icon="@drawable/ic_menu_level"
                android:title="@string/level_a1" />
                <item
                    android:id="@+id/nav_level_A2"
                    android:icon="@drawable/ic_menu_level"
                    android:title="@string/level_a2" />
                <item
                    android:id="@+id/nav_level_B1"
                    android:icon="@drawable/ic_menu_level"
                    android:title="@string/level_b1" />
                <item
                    android:id="@+id/nav_level_B2"
                    android:icon="@drawable/ic_menu_level"
                    android:title="@string/level_b2" />
            </group>
        </menu>
    </item>

    <item android:title="General" android:menuCategory="system" >
        <menu>
             <item
               android:id="@+id/nav_config"
               android:icon="@drawable/ic_menu_manage"
               android:title="@string/configuration" />
            <item
                android:id="@+id/nav_shared"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/shared" />
             <item
               android:id="@+id/nav_info"
               android:icon="@drawable/ic_info"
               android:title="@string/info" />
        </menu>

    </item>

</menu>
