<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/exercise_type_two"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <!--type translate -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/info_two"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:text="@string/info_translate"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:id="@+id/txt_lang_translate_question"/>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:id="@+id/img_lang_translate_question"/>

        </LinearLayout>

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/question_translate"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/fab_margin"
            style="@android:style/TextAppearance.DeviceDefault.Large"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:id="@+id/txt_lang_translate_answer"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:id="@+id/img_lang_translate_answer"/>


            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_translate"
                android:layout_marginLeft="@dimen/fab_margin"
                android:lines="2"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/out"
            android:id="@+id/out_btn_translate"/>
        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            android:id="@+id/ok_btn_translate"/>
    </LinearLayout>


    </LinearLayout>