<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:id="@+id/fragment_home">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="10dip"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notifications"
            android:orientation="vertical">


        </LinearLayout>

        <TextView
            android:text="@string/title_statics_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="16dip" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dip"
            android:id="@+id/statistics"
            android:orientation="vertical"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_prev"
                    android:layout_alignParentLeft="true"
                    android:padding="0dip"
                    style="@style/Base.Widget.AppCompat.ActionButton"
                    android:src="@drawable/ic_action_left"/>
                <Button
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:id="@+id/btn_now"
                    android:layout_height="wrap_content"
                    android:text="@string/week_now"
                    android:padding="0dip"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentLeft="true" />
                <ImageButton
                    android:padding="0dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_next"
                    style="@style/Base.Widget.AppCompat.ActionButton"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_action_right"/>

            </LinearLayout>


            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/lineChart"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:padding="8dip"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dip"
            android:id="@+id/statistics_evaluation"
            android:orientation="vertical">
            <TextView
                android:text="@string/title_evaluation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="16dip" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dip" />



        </LinearLayout>





    </LinearLayout>
</ScrollView>




</LinearLayout>