<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:id="@+id/exercise_type_three">
    <!-- type complete -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/info_two"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:text="@string/info_complete"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/info"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            />




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/fab_margin">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginRight="@dimen/fab_margin">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dip"
                        android:layout_weight="1"
                        android:text="ES"
                        android:id="@+id/txt_lang_complete_question"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dip"
                        android:layout_weight="1"
                        android:id="@+id/img_lang_complete_question"/>

                </LinearLayout>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/border_3">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:padding="@dimen/subject"
                        android:orientation="horizontal"

                        android:id="@+id/question_complete"
                        android:scrollbars="horizontal"
                        >
                    </LinearLayout>
                </HorizontalScrollView>



            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@drawable/border_3"
                android:padding="@dimen/activity_horizontal_margin">



            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/out"
            android:id="@+id/out_btn_complete"/>
        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            android:id="@+id/ok_btn_complete"/>
    </LinearLayout>
</LinearLayout>